[package]
name = "make-fabric-mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
crossterm = "0.25.0"
serde_json = "1.0.87"

[dev-dependencies]
rstest = "0.15.0"
tempfile = "3.3.0"
